--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
+    "react-swipeable": "^7.0.2",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
