--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.6",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.11.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
